--- a/templates/index.jade
+++ b/templates/index.jade
@@ -102,7 +102,7 @@ block content
 		p &nbsp
 
 
-	.row
+	//.row
 		section.main-content
 			article#our-mission.page(data-id="our-mission")
 				div(data-id="container")
