--- a/templates/deepmind_index.html
+++ b/templates/deepmind_index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible"  content="IE=edge">
     <meta name="description"            content="Google DeepMind">
     <meta name="viewport"               content="width=device-width, initial-scale=1">
-    <link href="css/stylesheet.css"     rel="stylesheet" type="text/css" />
+    <link href="/static/css/deepmind/deepmind.css"     rel="stylesheet" type="text/css" />
     <!--[if IE]>
     <link href="css/stylesheet-ie.css"  rel="stylesheet" type="text/css" />
     <![endif]-->
     <link rel="icon"                    type="image/png" href="favicon.png" />
-    <link href="css/iconfont.css"  rel="stylesheet" type="text/css" />
+    <link href="/static/css/font.css"  rel="stylesheet" type="text/css" />
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -175,5 +175,5 @@
         </footer>
     </body>
     <script type="text/javascript" src="//use.typekit.net/azt5qxp.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="/static/js/app.js"></script>
 </html>
