--- a/templates/deepmind_index.html
+++ b/templates/deepmind_index.html
@@ -1,56 +1,11 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-    <title>Google DeepMind</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible"  content="IE=edge">
-    <meta name="description"            content="Google DeepMind">
-    <meta name="viewport"               content="width=device-width, initial-scale=1">
-    <link href="/static/css/deepmind/deepmind.css"     rel="stylesheet" type="text/css" />
-    <!--[if IE]>
-    <link href="css/stylesheet-ie.css"  rel="stylesheet" type="text/css" />
-    <![endif]-->
-    <link rel="icon"                    type="image/png" href="favicon.png" />
-    <link href="/static/css/font.css"  rel="stylesheet" type="text/css" />
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-31357224-1', 'deepmind.com');
-        ga('send', 'pageview');
-    </script>
+    <link href="/static/css/smarty_crap.css"     rel="stylesheet" type="text/css" />
+
 </head>
     <body id="home">
-        <header class="underlay"></header>
-        <header class="overlay">
-            <ul>
-                <li>
-                    <a href="#">
-                        <figure class="logo"></figure>
-                    </a>
-                </li>
-                <li>
-                    <ul data-id="pages">
-                        <li class="menuBtn">
-                            <a href="#" data-action="toggle-menu"><img class="menu" src="css/images/menu.svg" /><img class="close" src="css/images/menu-close.svg" /></a>
-                        </li>
-                        <li>
-                            <a href="javascript:;" data-action="who-we-are">Who We Are</a>
-                        </li>
-                        <li>
-                            <a href="javascript:;" data-action="our-mission">Our Mission</a>
-                        </li>
-                        <li>
-                            <a href="javascript:;" data-action="work-with-us">Work With Us</a>
-                        </li>
-                        <li>
-                            <a href="javascript:;" data-action="press-enquiries">Press</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </header>
+
         <section class="main-content">
             <article class="page" data-id="who-we-are" id="who-we-are">
                 <div data-id="container">
@@ -160,19 +115,7 @@
                 </div>
             </article>
         </section>
-        <footer>
-            <ul>
-                <li>
-                    <a href="legal.html#terms-and-conditions">Terms & Conditions</a>
-                </li>
-                <li>
-                    <a href="legal.html#privacy-policy">Privacy &amp; Cookies</a>
-                </li>
-                <li class="copyright">
-                    &copy; <span class="date">2014</span>, GOOGLE INC. ALL RIGHTS RESERVED.
-                </li>
-            </ul>
-        </footer>
+
     </body>
     <script type="text/javascript" src="//use.typekit.net/azt5qxp.js"></script>
     <script src="/static/js/app.js"></script>
