same as before but with audio player to check range requests

--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -33,7 +33,7 @@ block content
                     img.displayed(src='{{topic_image}}', width='700', alt=' topic image')
                 .row
 
-                    //audio(controls="")
+                    audio(controls="")
                         source(src="/static/audio/science_ganymede.mp3", type="audio/mpeg")
 
                     //audio(preload="auto", controls="")
