--- a/templates/test_index.jade
+++ b/templates/test_index.jade
@@ -146,7 +146,7 @@ body#home
                 figure.scroll(data-id="scroll-top")
                     i.icon.icon-UpArrow
                     div Top
-script(type="text/javascript", src="//use.typekit.net/azt5qxp.js")
+//script(type="text/javascript", src="//use.typekit.net/azt5qxp.js")   //this is some font stuff!! makes the index page take ages to load though..
 script(src="/static/js/app.js")
 script(src='/static/js/smooth-scroll.js')
 script.
