rewriting front end in html without bootstrap

--- a/templates/deepmind_index.html
+++ b/templates/deepmind_index.html
@@ -6,7 +6,7 @@
 </head>
     <body id="home">
 
-        <section class="main-content">
+        <section class="homepage">
             <article class="page" data-id="who-we-are" id="who-we-are">
                 <div data-id="container">
                     <ul>
