--- a/templates/index/test_index.jade
+++ b/templates/index/test_index.jade
@@ -1,4 +1,5 @@
 doctype html
+//index with scrolly thing
 html.no-js
 head
     link(href="/static/css/smarty_crap.css", rel="stylesheet", type="text/css")
@@ -32,7 +33,7 @@ body#home
                                     input#entry_238733277.ss-q-short.form-control(type='text', name='entry.238733277', value='', dir='auto', aria-label='Would you like to be updated about new audio-docs?  ', title='', placeholder="email address")
                                     input#ss-submit.jfk-button.jfk-button-action.btn-success.btn(type='submit', name='submit', value='stay informed')
 
-    section.main-content
+    section.homepage
         article#who-we-are.page(data-id="who-we-are")
             div(data-id="container")
                 .row
