--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,130 +1,50 @@
-body {
-    margin: 0;
+
+html {
+    font-family: 'Lato', sans-serif;
 }
 
-section.homepage article {
+h1{
+    font-size: 4em;
+    margin:0;
+    padding:0;
+    font-weight: 100;
+    text-transform: uppercase;
 
-    box-sizing: border-box;
+
+    }
+
+
+/* Centered texts in each section
+* --------------------------------------- */
+.section{
+    text-align:center;
+}
+
+/* Fixed header and footer.
+* --------------------------------------- */
+#header{
+    position:fixed;
+    height: 50px;
+    display:block;
     width: 100%;
-    text-align: center;
-    padding: 25px;
+    background: #585858;
+    z-index:9;
+    text-align:center;
+    padding: 20px 0 0 0;
+    top:0px;
+}
+#header h1{
+    color: #FFFFFF;
+    font-weight: 100;
+    text-transform: uppercase;
     font-size: 2em;
-    font-weight: 400;
-}
-
-body>section.homepage article .scroll i {
-    width: 2.5em;
-    height: 2.5em;
-    font-size: 1.8em;
-    padding: .7em;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    border: .1em solid #2e90f2;
-    display: block;
-    margin: 0 auto .15em;
-    background-size: 0;
-    border-radius: 2.5em;
-    transition-duration: .2s;
-}
-
-
-/*------------------------------------------------------------*/
-/* arrow stuff!! */
-
-/* the wrapper element that will become the outer circle */
-.arrow-wrap {
-  position:absolute;
-  z-index:1;
-  left:50%;
-  top:-5em;
-  margin-left:-5em;
-  background:#111;
-  width:10em;
-  height:10em;
-  padding:4em 2em;
-  border-radius:50%;
-  font-size:0.5em;
-  display:block;
-  box-shadow:0px 0px 5px 0px #333;
-}
-
-/* a triangle to make the main part of the arrow. Adjust the border-color to fit your needs */
-.arrow {
-  float:left;
-  position:relative;
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 3em 3em 0 3em;
-  border-color: #ffffff transparent transparent transparent;
-  -webkit-transform:rotate(360deg);/* added for better anti-aliasing on webkit browsers */
-}
-
-/* a pseudo element arrow placed on top of the other one with the same color as the wrapper */
-.arrow:after {
-  content:'';
-  position:absolute;
-  top:-3.2em;
-  left:-3em;
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 3em 3em 0 3em;
-  border-color: #111 transparent transparent transparent;
-  -webkit-transform:rotate(360deg);/* added for better anti-aliasing on webkit browsers */
-}
-
-
-/*------------------------------------------------------------*/
-/* hover box! */
-
-.box {
-    cursor: pointer;
-    height: 600px;
-    float: left;
-    margin: 5px;
-    position: relative;
-    overflow: hidden;
-    width: 600px;
+    postion: absolute;
+    left: 20px;
 
 }
 
-.box img {
-    position: absolute;
-    left: 0;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
+hr{
+  width: 25%;
+  margin-top: 20px;
 }
-
-
-.box .caption {
-    font-family: Tahoma;
-    font-size: .5em;
-    background-color: rgba(0,0,0,0.8);
-    position: absolute;
-    color: #fff;
-    z-index: 100;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
-    left: 0;
-    opacity: 0;
-    width: 500px;
-    height: 375px;
-    text-align: center;
-    padding: 15px;
-}
-
-
-.box:hover .fade-caption {
-    opacity: 0.7;
-}
-
-/*------------------------------------------------------------*/
-
 
