--- a/templates/index/test_index.jade
+++ b/templates/index/test_index.jade
@@ -123,6 +123,7 @@ body#home
                 ul
                     li.page-title
                         | About
+                        a(data-scroll='', href="#lalala") Lalala
                     li
                         p SmartyCrap is a bit of a crappy name...
 
@@ -147,7 +148,6 @@ body#home
                 figure.scroll(data-id="scroll-top")
                     i.icon.icon-UpArrow
                     div Top
-//script(type="text/javascript", src="//use.typekit.net/azt5qxp.js")   //this is some font stuff!! makes the index page take ages to load though..
 script(src="/static/js/app.js")
 script(src='/static/js/smooth-scroll.js')
 script.
