--- a/templates/index/fixedHeaders.html
+++ b/templates/index/fixedHeaders.html
@@ -54,7 +54,7 @@
 	<span id="home"></span>
 	<div class="section " id="section0">
 		<div class="intro">
-			<h1>SmartyCrap</h1>
+			<h1>SmartyCrap lala</h1>
 		</div>
 	</div>
 	<span id="about"></span>
