--- a/templates/index/fixedHeaders.html
+++ b/templates/index/fixedHeaders.html
@@ -20,11 +20,8 @@
 		</script>
 	<![endif]-->
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
+	<script type="text/javascript" src="/static/js/jquery1.8.3.min.js"></script>
 	<script type="text/javascript" src="/static/js/jquery.slimscroll.min.js"></script>
-
 	<script type="text/javascript" src="/static/js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="/static/js/examples.js"></script>
 
