got send_from_dir to work. need to enable partial requests, and get it to work within the audiodoc page though..

--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -54,6 +54,7 @@ block content
                     .col-md-1
                     .col-md-3.boxed
                         .row.text-center
+                            {{bige}}
                             h3.text-center {{author_name}}
                             img(src='{{author_image}}', alt='contributor image', width='200')
                         .row.text-center.boxed_invisible
