got partial content to work! its streaming, but going back to home page doesnt work (broken pipe stuff). maybe if its up itll work fine..

--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -33,8 +33,8 @@ block content
                     img.displayed(src='{{topic_image}}', width='700', alt=' topic image')
                 .row
 
-                    //audio(controls="")
-                        source(src="/static/audio/science_ganymede.mp3", type="audio/mpeg")
+                    audio(controls="")
+                        source(src="https://jeremiestest.herokuapp.com/audio/science_ganymede.mp3", type="audio/mpeg")
 
                     //audio(preload="auto", controls="")
                         source(src="http://osvaldas.info/examples/audio-player-responsive-and-touch-friendly/audio.mp3")
