--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -34,7 +34,7 @@ block content
                 .row
 
                     audio(controls="")
-                        source(src="https://jeremiestest.herokuapp.com/audio/science_ganymede.mp3", type="audio/mpeg")
+                        source(src="{{audio}}", type="audio/mpeg")
 
                     //audio(preload="auto", controls="")
                         source(src="http://osvaldas.info/examples/audio-player-responsive-and-touch-friendly/audio.mp3")
@@ -54,7 +54,6 @@ block content
                     .col-md-1
                     .col-md-3.boxed
                         .row.text-center
-                            {{bige}}
                             h3.text-center {{author_name}}
                             img(src='{{author_image}}', alt='contributor image', width='200')
                         .row.text-center.boxed_invisible
