--- a/templates/index.html
+++ b/templates/index.html
@@ -77,20 +77,22 @@
 
   <!-- Most Recent Podcast Section -->
   <header>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <img class="img-responsive" src="{{topic_image}}" alt="">
           <div class="intro-text">
-            <span class="name">Ganymede - Exploration </span>
-            <span class="skills">Explore the interesting background of ancient Romes most interesting gentleman </span>
+            <span class="name"> Oceans on Ganymede </span>
+            <span class="skills">The search for liquid on Jupiter's moon could reveal a habitat suitable for life </span>
           </div>
         </div>
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
             <source src="{{ audio }}" type="audio/mpeg">
+            <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
+
             Your browser does not support the audio element.
           </audio>
         </div>
@@ -127,6 +129,7 @@
 
         <div class="col-lg-12">
           <audio controls>
+            <source src="{{ audio }}" type="audio/mpeg">
             <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
             Your browser does not support the audio element.
           </audio>
@@ -168,6 +171,7 @@
 
       <div class="col-lg-12">
         <audio controls>
+          <source src="{{ audio }}" type="audio/mpeg">
           <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
           Your browser does not support the audio element.
         </audio>
@@ -213,10 +217,10 @@
       </div>
 
       <div class="col-lg-4 col-lg-offset-2">
-        <p>We're a bunch of fun loving academics who want to capture that pub chat experience for the entire world. Extra stuff and content generica language cool words and other things.</p>
+        <p>We're a bunch of fun loving academics who want to capture that pub chat experience for the entire world. Get an insight into the exciting world of academic research with our short 'audio-documentaries', on subjects like physics, history, philosophy, and many more.</p>
       </div>
       <div class="col-lg-4">
-        <p>We're a bunch of fun loving academics who want to capture that pub chat experience for the entire world. Extra stuff and content generica language cool words and other things.</p>
+        <p>All audio-docs were written by experts in the subject at hand (phd student, lecturers, professors) at some of the UK's top universities. They provide a first hand account of their discipline, and show us what makes it great.</p>
       </div>
     </div>
   </section>
@@ -230,9 +234,11 @@
           <hr class="star-primary">
         </div>
         <div class="col-md-4 col-md-offset-2 ">
-          <p> If you're an academic who has some thoughts you'd like to share through the medium of podcast, then please get in touch.<p>
+          <p> Are you an academic who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?<p>
           </br>
-          <p> If you're an academic who has some thoughts you'd like to share through the medium of podcast, then please get in touch.<p>
+        </div>
+        <div class="col-md-4 col-md-offset-1 ">
+          <p> If so, then please get in touch. Fill in the contact form below with your name, email, and field of research and we will get back to you with more details. Please note that you must have a PhD to contribute to Knowitwall.<p>
         </div>
       </div>
     </div>
