--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,13 @@
   <title>Know it Wall</title>
 
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="static/css/knowitwall.css" rel="stylesheet">
+  <link href="/static/css/knowitwall.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
-  <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -44,7 +44,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#page-top">Know it wall</a>
+        <a class="navbar-brand" href="#page-top">Know it Wall</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -339,22 +339,22 @@
 
 
   <!-- jQuery -->
-  <script src="static/js/jquery.js"></script>
+  <script src="/static/js/jquery.js"></script>
 
   <!-- Bootstrap Core JavaScript -->
-  <script src="static/js/bootstrap.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
 
   <!-- Plugin JavaScript -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-  <script src="static/js/classie.js"></script>
-  <script src="static/js/cbpAnimatedHeader.js"></script>
+  <script src="/static/js/classie.js"></script>
+  <script src="/static/js/cbpAnimatedHeader.js"></script>
 
   <!-- Contact Form JavaScript -->
-  <script src="static/js/jqBootstrapValidation.js"></script>
-  <script src="static/js/contact_me.js"></script>
+  <script src="/static/js/jqBootstrapValidation.js"></script>
+  <script src="/static/js/contact_me.js"></script>
 
   <!-- Custom Theme JavaScript -->
-  <script src="static/js/knowitwall.js"></script>
+  <script src="/static/js/knowitwall.js"></script>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
